@@ -22,7 +22,7 @@
   <parent>
     <groupId>com.github.robtimus</groupId>
     <artifactId>robtimus-parent</artifactId>
-    <version>1.4.2</version>
+    <version>1.4.3</version>
     <relativePath />
   </parent>
 
@@ -38,7 +38,7 @@
   <licenses>
     <license>
       <name>The Apache Software License, Version 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
     </license>
   </licenses>
 
@@ -65,6 +65,8 @@
     <version.json-api>1.1.6</version.json-api>
     <version.json-impl>1.1.6</version.json-impl>
     <version.obfuscation-core>1.4</version.obfuscation-core>
+    <!-- Use version 1.7.32 to match the latest release; this will allow Snyk to warn for vulnerabilities -->
+    <version.slf4j>1.7.32</version.slf4j>
   </properties>
 
   <dependencies>
@@ -84,6 +86,7 @@
       <groupId>org.glassfish</groupId>
       <artifactId>jakarta.json</artifactId>
       <version>${version.json-impl}</version>
+      <classifier>module</classifier>
       <scope>runtime</scope>
     </dependency>
 
@@ -112,7 +115,8 @@
 
     <dependency>
       <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
+      <artifactId>mockito-inline</artifactId>
+      <version>${version.mockito}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -271,4 +275,53 @@
       </plugin>
     </plugins>
   </build>
+
+  <profiles>
+    <profile>
+      <id>native-module</id>
+      <properties>
+        <version.java>11</version.java>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <!-- Allow JUnit to fully access the test classes -->
+              <argLine>
+                --add-opens com.github.robtimus.obfuscation.json/com.github.robtimus.obfuscation.json=ALL-UNNAMED
+              </argLine>
+            </configuration>
+          </plugin>
+
+          <plugin>
+            <groupId>org.moditect</groupId>
+            <artifactId>moditect-maven-plugin</artifactId>
+            <configuration>
+              <skip>true</skip>
+            </configuration>
+          </plugin>
+
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>build-helper-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <phase>generate-sources</phase>
+                <goals>
+                  <goal>add-source</goal>
+                </goals>
+                <configuration>
+                  <sources>
+                    <source>${project.basedir}/src/moditect</source>
+                  </sources>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
